--- a/web/index.html
+++ b/web/index.html
@@ -40,6 +40,7 @@
   <script src="flutter.js" defer></script>
 </head>
 <body>
+<script src="jsQR.js" type="application/javascript"></script> <!-- Add this line -->
   <script>
     window.addEventListener('load', function(ev) {
       // Download main.dart.js
